--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@
 </head>
 
 <body>
-   
+
 
     <header>
         <div class="container-fluid hide1">
             <div class="container">
                 <div class="d-flex">
-                    <div class="p-10 w-15 lg-1 p-0 text-center">
+                    <div class="p-1 w-15 lg-1 p-0 text-center">
                         <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
                             <a class="fluid2 font1" href="">
-                                <i class="fa-solid fa-location-dot fluid3 mr-5"></i> 123 Street, CA, USA
+                                <i class="fa-solid fa-location-dot fluid3 mr-5"></i>
+                                123 Street, CA, USA
                             </a>
                         </div>
                     </div>
-                    <div class="p-10 p-0 w-15 lg-1 text-center">
+                    <div class="p-1 p-0 w-15 lg-1 text-center">
                         <div class="box mt-10 pb-10 mb-5 mb-0 mt-0">
                             <a class="fluid2 font1" href="">
                                 <i class="fa-solid fa-phone fluid3 mr-5"></i>
@@ -47,7 +48,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="p-10 p-0 w-15 lg-1 text-center">
+                    <div class="p-1 p-0 w-15 lg-1">
                         <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
                             <a class="fluid2 font1" href="">
                                 <i class="fa-solid fa-envelope fluid3 "></i>
@@ -57,7 +58,7 @@
                     </div>
                     <div class="w-40 h-50 p-10 text-center hide">
                         <div class="box mt-5 mb-5">
-                            <input class="w-1 p-10 border-radius" placeholder="Search Here" type="text">
+                            <input class="w-1 h-50 p-10 border-radius" placeholder="Search Here" type="text">
                         </div>
                     </div>
                     <div class="p-10 p-0 w-15 lg-1 text-center">
@@ -135,15 +136,18 @@
     </header>
 
 
-    <section>
-        <div class="container mt-40 p-7">
-            <div class="d flex">
-                <div class="w-1 h-5 p-10">
-                    <div class="box"></div>
+    <!-- <section>
+        <div class="container1 border">
+            <div class="single-item">
+                    <div class="box">
+                        <img class="object" width="100%" height="100%" src="Images/slider/carousel-1.jp" alt="">
+                    </div>
+                <div class="p-10">
+                    <div class="box">123456789</div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- --------------------find pets--------------------------- -->
 
@@ -576,16 +580,136 @@
 
             <div class="slider1">
                 <div class="p-20">
-                    <div class="box">123456789</div>
+                    <div class="box">
+                        <div>
+                            <img class="border-radius10" width="100%" src="Images/blog/blog-1 (1).jpg" alt="">
+                        </div>
+                        <div class="p-9 d-flex middle2">
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-user"></i>
+                                By Admin
+                            </span>
+
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-calendar-days"></i>
+                                10 Feb, 2023
+                            </span>
+                        </div>
+                        <div class="p-10">
+                            <h4 class="font10 nunito fluid3 mb-5 fw-7 lh">
+                                How To Build A Cleaning Plan
+                            </h4>
+                            <p class="open font8 mb-15 fluid2 lh5 fw-4">
+                                Lorem ipsum dolor sit, amet consectular alip sed eiusmod tempor
+                            </p>
+                        </div>
+                        <div class="bg3 p-12 d-flex middle2">
+                            <a class="open fluid3 font8 p-11 fw-5 lh5" href="">LEARN MORE</a>
+                            <a class="open font8 fluid3 fw-4 lh5 m-1" href="">
+                                <i class="fa-solid fa-comments"></i>
+                                23 Comments
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="p-20">
-                    <div class="box">123456789</div>
+                    <div class="box">
+                        <div>
+                            <img class="border-radius10" width="100%" src="Images/blog/blog-1.jpg" alt="">
+                        </div>
+                        <div class="p-9 d-flex middle2">
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-user"></i>
+                                By Admin
+                            </span>
+
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-calendar-days"></i>
+                                10 Feb, 2023
+                            </span>
+                        </div>
+                        <div class="p-10">
+                            <h4 class="font10 nunito fluid3 mb-5 fw-7 lh">
+                                How To Build A Cleaning Plan
+                            </h4>
+                            <p class="open font8 mb-15 fluid2 lh5 fw-4">
+                                Lorem ipsum dolor sit, amet consectular alip sed eiusmod tempor
+                            </p>
+                        </div>
+                        <div class="bg3 p-12 d-flex middle2">
+                            <a class="open fluid3 font8 p-11 fw-5 lh5" href="">LEARN MORE</a>
+                            <a class="open font8 fluid3 fw-4 lh5 m-1" href="">
+                                <i class="fa-solid fa-comments"></i>
+                                23 Comments
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="p-20">
-                    <div class="box">123456789</div>
+                    <div class="box">
+                        <div>
+                            <img class="border-radius10" width="100%" src="Images/blog/blog-2.jpg" alt="">
+                        </div>
+                        <div class="p-9 d-flex middle2">
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-user"></i>
+                                By Admin
+                            </span>
+
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-calendar-days"></i>
+                                10 Feb, 2023
+                            </span>
+                        </div>
+                        <div class="p-10">
+                            <h4 class="font10 nunito fluid3 mb-5 fw-7 lh">
+                                How To Build A Cleaning Plan
+                            </h4>
+                            <p class="open font8 mb-15 fluid2 lh5 fw-4">
+                                Lorem ipsum dolor sit, amet consectular alip sed eiusmod tempor
+                            </p>
+                        </div>
+                        <div class="bg3 p-12 d-flex middle2">
+                            <a class="open fluid3 font8 p-11 fw-5 lh5" href="">LEARN MORE</a>
+                            <a class="open font8 fluid3 fw-4 lh5 m-1" href="">
+                                <i class="fa-solid fa-comments"></i>
+                                23 Comments
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="p-20">
-                    <div class="box">123456789</div>
+                    <div class="box">
+                        <div>
+                            <img class="border-radius10" width="100%" src="Images/blog/blog-3.jpg" alt="">
+                        </div>
+                        <div class="p-9 d-flex middle2">
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-user"></i>
+                                By Admin
+                            </span>
+
+                            <span class="fluid3 font8 fw-4 lh5 open">
+                                <i class="fa-solid fa-calendar-days"></i>
+                                10 Feb, 2023
+                            </span>
+                        </div>
+                        <div class="p-10">
+                            <h4 class="font10 nunito fluid3 mb-5 fw-7 lh">
+                                How To Build A Cleaning Plan
+                            </h4>
+                            <p class="open font8 mb-15 fluid2 lh5 fw-4">
+                                Lorem ipsum dolor sit, amet consectular alip sed eiusmod tempor
+                            </p>
+                        </div>
+                        <div class="bg3 p-12 d-flex middle2">
+                            <a class="open fluid3 font8 p-11 fw-5 lh5" href="">LEARN MORE</a>
+                            <a class="open font8 fluid3 fw-4 lh5 m-1" href="">
+                                <i class="fa-solid fa-comments"></i>
+                                23 Comments
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -906,7 +1030,8 @@
                     <div class="box background1 border-radius">
                         <div class="p-20 mb-24">
                             <p class="open font6 fluid2 fw-4 lh5">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente,
+                                dolor eius quis eligendi voluptates amet optio.
                             </p>
                         </div>
                         <div class="d-flex">
@@ -940,7 +1065,8 @@
                     <div class="box background1 border-radius">
                         <div class="p-20 mb-24">
                             <p class="open font6 fluid2 fw-4 lh5">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente,
+                                dolor eius quis eligendi voluptates amet optio.
                             </p>
                         </div>
                         <div class="d-flex">
@@ -974,7 +1100,8 @@
                     <div class="box background1 border-radius">
                         <div class="p-20 mb-24">
                             <p class="open font6 fluid2 fw-4 lh5">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente,
+                                dolor eius quis eligendi voluptates amet optio.
                             </p>
                         </div>
                         <div class="d-flex">
@@ -1008,7 +1135,8 @@
                     <div class="box background1 border-radius">
                         <div class="p-20 mb-24">
                             <p class="open font6 fluid2 fw-4 lh5">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente, dolor eius quis eligendi voluptates amet optio.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta explicabo sapiente,
+                                dolor eius quis eligendi voluptates amet optio.
                             </p>
                         </div>
                         <div class="d-flex">
@@ -1048,24 +1176,93 @@
         <div class="container1 h-4 ime2">
             <div class="container mt-40 p-7">
                 <div class="d-flex border mt-24">
-                    <div class="w-4 h-2 p-10">
+                    <div class="w-4 p-10">
                         <div class="box">
-                            <h4 class="font10 open mb-24 fluid4 fw-7 lh ">
+                            <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
                                 About PestKit.
                             </h4>
+                            <p class="open font8 mb-15 fluid8 lh5 fw-4 text-capital">
+                                Nostrud exertation ullamco <br />
+                                labor nisi aliquip ex ea <br />
+                                commodo consequat duis <br />
+                                aute irure dolor in <br /> reprehenderit in voluptate <br /> velit esse cillum dolore.
+                            </p>
+
+                            <p class="open font8 fluid8 fw-4 lh5">
+                                <a class="fluid4" href="">
+                                    PestKit
+                                </a>
+                                © 2023 All Right <br />
+                                Reserved
+                            </p>
                         </div>
                     </div>
 
-                    <div class="w-4 h-2 p-10">
-                        <div class="box"></div>
+                    <div class="w-4 p-10">
+                        <div class="box">
+                            <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
+                                Usefull Link
+                            </h4>
+                            <div class="">
+                                <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    About Us
+                                </a>
+
+                                <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Contact Us
+                                </a>
+
+                                <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Our Services
+                                </a>
+
+                                <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Terms & Condition
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="w-4 h-2 p-10">
-                        <div class="box"></div>
+                    <div class="w-4 p-10 border">
+                        <div class="box">
+                            <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
+                                Services Link
+                            </h4>
+
+                            <div class="border">
+                                <a class=" border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Apparment Cleaning
+                                </a>
+
+                                <a class="border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Office Cleaning
+                                </a>
+
+                                <a class="border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Car Washing
+                                </a>
+
+                                <a class="border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                    <i class="fa-solid fa-check"></i>
+                                    Green Cleaning
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="w-4 h-2 p-10">
-                        <div class="box"></div>
+                    <div class="w-4 p-10">
+                        <div class="box">
+                            <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
+                                Contact Us
+                            </h4>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1115,39 +1312,43 @@
 
     <script>
         $('.slider1').slick({
-  dots: true,
-  infinite: true,
-  speed: 300,
-  slidesToShow: 3,
-  slidesToScroll: 1,
-  responsive: [
-    {
-      breakpoint: 1024,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        infinite: true,
-        dots: true
-      }
-    },
-    {
-      breakpoint: 600,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    }
-    // You can unslick at a given breakpoint now by adding:
-    // settings: "unslick"
-    // instead of a settings object
-  ]
-});
+            dots: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                        infinite: true,
+                        dots: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+                // You can unslick at a given breakpoint now by adding:
+                // settings: "unslick"
+                // instead of a settings object
+            ]
+        });
+    </script>
+
+    <script>
+        $('.single-item').slick();
     </script>
 </body>
