--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container-fluid1">
             <div class="container">
                 <div class="d-flex">
-                    <div class="w-30 p-10 start md-90 sm-75">
+                    <div class="w-30 p-10 pt-10 start md-90 sm-75">
                         <div class="w-1 h-50">
                             <div class="box">
                                 <a href="">
@@ -952,10 +952,10 @@
             </div>
 
             <div class="d-flex">
-                <div class="w-4 h-3 p-20">
+                <div class="w-4 h-0 pb mb h-3 p-20 md-2 lg-1">
                     <div class="box">
                         <img class="border-radius10" width="100%" height="91%" src="Images/team/team-1..jpg" alt="">
-                        <div class="bg3 text-center p-8">
+                        <div class="bg3 border-radius2 text-center p-8">
                             <span class="font10 open fluid3 fw-7 lh5">
                                 Full Name
                             </span>
@@ -963,10 +963,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-4 h-3 p-20">
+                <div class="w-4 h-0 pb mb h-3 p-20 md-2 lg-1">
                     <div class="box">
                         <img class="border-radius10" width="100%" height="91%" src="Images/team/team-2.jpg" alt="">
-                        <div class="bg3 text-center p-8">
+                        <div class="bg3 border-radius2 text-center p-8">
                             <span class="font10 open fluid3 fw-7 lh5">
                                 Full Name
                             </span>
@@ -974,10 +974,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-4 h-3 p-20">
+                <div class="w-4 h-0 pb mb h-3 p-20 md-2 lg-1">
                     <div class="box">
                         <img class="border-radius10" width="100%" height="91%" src="Images/team/team-3.jpg" alt="">
-                        <div class="bg3 text-center p-8">
+                        <div class="bg3 border-radius2 text-center p-8">
                             <span class="font10 open fluid3 fw-7 lh5">
                                 Full Name
                             </span>
@@ -985,10 +985,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-4 h-3 p-20">
+                <div class="w-4 h-0 pb mb h-3 p-20 md-2 lg-1">
                     <div class="box">
                         <img class="border-radius10" width="100%" height="91%" src="Images/team/team-4.jpg" alt="">
-                        <div class="bg3 text-center p-8">
+                        <div class="bg3 border-radius2 text-center p-8">
                             <span class="font10 open fluid3 fw-7 lh5">
                                 Full Name
                             </span>
@@ -1173,10 +1173,10 @@
     <!-- --------------------------------footer------------------ -->
 
     <footer>
-        <div class="container1 h-4 ime2">
+        <div class="container1 ime2">
             <div class="container mt-40 p-7">
-                <div class="d-flex border mt-24">
-                    <div class="w-4 p-10">
+                <div class="d-flex mt-24">
+                    <div class="w-4 p-10 lg-1 md-2">
                         <div class="box">
                             <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
                                 About PestKit.
@@ -1198,58 +1198,58 @@
                         </div>
                     </div>
 
-                    <div class="w-4 p-10">
+                    <div class="w-4 p-10 lg-1 md-2">
                         <div class="box">
-                            <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
+                            <h4 class="font10 nunito mb-24 fluid4 fw-7 lh lg-1 ">
                                 Usefull Link
                             </h4>
-                            <div class="">
+                            <div class="lg-1">
                                 <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
-                                    <i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-check lg-1"></i>
                                     About Us
                                 </a>
 
                                 <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
-                                    <i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-check lg-1"></i>
                                     Contact Us
                                 </a>
 
                                 <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
-                                    <i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-check lg-1"></i>
                                     Our Services
                                 </a>
 
                                 <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
-                                    <i class="fa-solid fa-check"></i>
+                                    <i class="fa-solid fa-check lg-1"></i>
                                     Terms & Condition
                                 </a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="w-4 p-10 border">
+                    <div class="w-4 p-10 lg-1 md-2">
                         <div class="box">
                             <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
                                 Services Link
                             </h4>
 
-                            <div class="border">
-                                <a class=" border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                            <div class="">
+                                <a class=" hover open font8 fw-5 lh5 fluid4 p-13" href="">
                                     <i class="fa-solid fa-check"></i>
                                     Apparment Cleaning
                                 </a>
 
-                                <a class="border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                <a class=" hover open font8 fw-5 lh5 fluid4 p-13" href="">
                                     <i class="fa-solid fa-check"></i>
                                     Office Cleaning
                                 </a>
 
-                                <a class="border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                <a class=" hover open font8 fw-5 lh5 fluid4 p-13" href="">
                                     <i class="fa-solid fa-check"></i>
                                     Car Washing
                                 </a>
 
-                                <a class="border hover open font8 fw-5 lh5 fluid4 p-13" href="">
+                                <a class="hover open font8 fw-5 lh5 fluid4 p-13" href="">
                                     <i class="fa-solid fa-check"></i>
                                     Green Cleaning
                                 </a>
@@ -1257,11 +1257,76 @@
                         </div>
                     </div>
 
-                    <div class="w-4 p-10">
+                    <div class="w-4 p-10 lg-1 md-2">
                         <div class="box">
                             <h4 class="font10 nunito mb-24 fluid4 fw-7 lh ">
                                 Contact Us
                             </h4>
+
+                            <div>
+                                <a class="open fw-5 lh5 font8 fluid8 p-14 border-bottom" href="">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    123 Street, CA, USA
+                                </a>
+
+                                <a class="open fw-5 lh5 font8 fluid8 p-14 border-bottom" href="">
+                                    <i class="fa-solid fa-phone"></i>
+                                    +012 345 6789
+                                </a>
+
+                                <a class="open fw-5 lh5 font8 fluid8 p-14 border-bottom" href="">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    Info@Example.com
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid1 mt-40">
+            <div class="container p-10">
+                <div class="d-flex p-15">
+                    <div class="w-3 p-16 lg-1 m-b">
+                        <div class="box tc">
+                            <a class="fluid1 f1 font11 open fw-8 lh" href="">
+                                Pest
+                                <span class="fluid4">
+                                    Kit
+                                </span>
+                                <i class="fa-solid fa-spider"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="w-3 p-16 lg-1 m-b">
+                        <div class="box text-center tc">
+                            <a class="p-17 mr-15 bg3 border-radius50per fluid3 lh5 fw-5 font13 box12" href="">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+
+                            <a class="p-17 mr-15 bg3 border-radius50per fluid3 lh5 fw-5 font13 box12" href="">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+
+                            <a class="p-17 mr-15 bg3 border-radius50per fluid3 lh5 fw-5 font13 box12" href="">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+
+                            <a class="p-17 mr-15 bg3 border-radius50per fluid3 lh5 fw-5 font13 box12" href="">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="w-3 p-16 lg-1 m-b">
+                        <div class="box tc fluid4 open font8 text-right">
+                            Designed By 
+                            <a class="fluid1" href="">HTML Codex</a>
+                            <br/>
+                            Distributed By 
+                            <a class="fluid1" href="">ThemeWagon</a>
                         </div>
                     </div>
                 </div>
