--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <div class="container1">
             <div class="slick">
                 <div class="box relative color">
+                    <div class="sel3"></div>
                     <img style="width: 100%;" src="Images/slider/carousel-1.jpg" alt="">
                     <div class="sel1 d-flex1">
                         <h4 class="mb-24 fluid4 nunito fw-7 lh font10 text">
@@ -160,6 +161,7 @@
                 </div>
 
                 <div class="box relative">
+                    <div class="sel4"></div>
                     <img style="width: 100%;" src="Images/slider/carousel-2.jpg" alt="">
                     <div class="sel2 d-flex1">
                         <h4 class="mb-24 fluid4 nunito fw-7 lh font10 text">
